@@ -1,4 +1,6 @@
 Changes for 1.3.3.0
+* Changed unitAttachment toString to be much more informative, and include all values. (veqryn)
+
 * Created new Relationship attachments for canMoveLandUnitsOverOwnedLand and canMoveAirUnitsOverOwnedLand, and set them to validate movement. (veqryn)
 
 * Allowed conditionType for both triggers and conditions (objectives) attachments to have integer values, in addition to other values,
